# bazel-cpp-template

./: .bazelrc  compile_commands.json
maincpp/: BUILD.bazel  foo.cpp  hello_greet.cpp  main.cpp
maincpp/include/: foo.hpp
